# discord-twitter-webhooks

./: .env-example  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Pipfile  Procfile  README.md  app.json  config.py  dev-requirements.txt  discord-twitter-webhooks.service  discord_hooks.py  docker-compose.yml  log.py  main.py  pyproject.toml  requirements.txt  rule-operators.md  settings.py  test_main.py
.github/: dependabot.yml  renovate.json
.github/workflows/: black.yml  codeql-analysis.yml  codeql.yml  docker-publish.yml  main.yml  python-app.yml  sync-with-mirrors.yml
discord_twitter_webhooks/: _dataclasses.py  add_missing_tags.py  add_new_feed.py  app.py  change.py  change_reddit_username_to_link.py  change_subreddit_to_clickable_link.py  dataclasses.py  get.py  get_feed_list.py  get_include_replies.py  get_include_retweets.py  get_media_links_and_remove_url.py  get_meta_image.py  get_settings.py  get_text.py  get_tweet_text.py  get_urls.py  global_settings.py  include_replies.py  include_retweets.py  logger.py  main.py  modify_feed.py  name_already_exists.py  reader_settings.py  reddit.py  remote_utm_source.py  remove.py  remove_copyright.py  remove_discord_link_previews.py  remove_group.py  remove_utm.py  replace.py  replace_hashtag_with_link.py  replace_hashtags.py  replace_nitter_instance.py  replace_tco_url_link_with_real_link.py  replace_username_with_link.py  replace_usernames.py  (+16 more)
discord_twitter_webhooks/set_settings/: append_usernames.py  blacklist.py  embed.py  hashtag_link.py  include_retweets.py  includes_replies.py  make_text_a_link.py  markdown.py  remove_copyright_symbols.py  remove_utm.py  send_only_link.py  send_text.py  set_webhook_url.py  translate.py  unescape_html.py  upload_media.py  username_link.py  usernames.py  whitelist.py
discord_twitter_webhooks/static/: add.js  style.css
discord_twitter_webhooks/templates/: add.html  base.html  feed.html  index.html  modify.html  nav.html  search.html  settings.html
discord_twitter_webhooks/templates/add/: 1_feed_details.html  2_what_to_send.html  3_how_to_send.html  4_embed_settings.html  5_send_link.html  6_translate.html  7_blackwhitelist.html  8_other.html  feed_details.html  infobox.html  other.html  send_link.html  send_text.html  translate.html  what_to_send.html  whitelist.html
discord_twitter_webhooks/tests/: test_remove.py
tests/: test_add_new_feed.py  test_discord_twitter_webhooks.py  test_get.py  test_global_settings.py  test_main.py  test_reader_settings.py  test_reddit.py  test_remove.py  test_remove_copyright.py  test_remove_utm.py  test_replace.py  test_replace_hashtags.py  test_replace_usernames.py  test_search.py  test_send_text.py  test_send_to_discord.py  test_send_webhook.py  test_settings.py
