[tool.poetry]
name = "discord-twitter-webhooks"
version = "3.0.0"
description = "Stream tweets to Discord"
authors = ["Joakim Hellsén <tlovinator@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/TheLovinator1/discord-twitter-webhooks"
repository = "https://github.com/TheLovinator1/discord-twitter-webhooks"
keywords = [
    "bot",
    "discord",
    "discord-twitter-webhooks",
    "nitter",
    "twitter",
    "webhook",
    "webhooks",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/TheLovinator1/discord-twitter-webhooks/issues"

[tool.poetry.scripts]
bot = 'discord_twitter_webhooks.main:start'

[tool.poetry.dependencies]
python = "^3.11"
discord-webhook = "^1.1.0"
loguru = "^0.7.0"
reader = "^3.5"
apscheduler = "^3.10.1"
fastapi = "^0.100.0"
jinja2 = "^3.1.2"
python-multipart = "^0.0.6"
uvicorn = "^0.23.0"
httpx = "^0.24.0"
lxml = "^4.9.2"
defusedxml = "^0.7.1"
deepl = "^1.15.0"
moviepy = "^1.0.3"
pydantic = "2.0.3"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.2.2"
black = "^23.7.0"
pytest = "^7.3.1"
djlint = "^1.32.1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core>=1",
]

[tool.isort]
profile = "black"

[tool.black]
line-length = 120
preview = true

[tool.ruff]
line-length = 120
select = [
    "E",
    "F",
    "B",
    "W",
    "C90",
    "I",
    "N",
    "D",
    "UP",
    "YTT",
    "ANN",
    "S",
    "BLE",
    "FBT",
    "A",
    "COM",
    "C4",
    "DTZ",
    "EM",
    "EXE",
    "ISC",
    "ICN",
    "G",
    "INP",
    "PIE",
    "T20",
    "PYI",
    "PT",
    "Q",
    "RSE",
    "RET",
    "SLF",
    "SIM",
    "TID",
    "TCH",
    "ARG",
    "PTH",
    "ERA",
    "PGH",
    "PL",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "TRY",
    "RUF",
]

ignore = [
    "D100",   # We don't use docstrings in public modules
    "D104",   # We don't use docstrings in __init__ files
    "FBT002", # This would warn when we use False in feed()
]

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.per-file-ignores]
"tests/*" = ["S101", "SIM114"]

[tool.pytest.ini_options]
addopts = "-vvvvvv --exitfirst"
filterwarnings = [
    "ignore:'imghdr' is deprecated and slated for removal in Python 3.13:DeprecationWarning",
    "ignore:'cgi' is deprecated and slated for removal in Python 3.13:DeprecationWarning",
    "ignore: No parser was explicitly specified, so I'm using the best available HTML parser for this system",
    "ignore: pkg_resources is deprecated as an API:DeprecationWarning",
]

[tool.djlint]
profile = "jinja"
ignore = "H023"                       # Firefox makes emojis if we use the unicode version(©️ vs &copy;)
format_attribute_template_tags = true
max_attribute_length = 120
