[tool.poetry]
name = "discord-twitter-webhooks"
version = "3.0.0"
description = "Stream tweets to Discord"
authors = ["Joakim Hellsén <tlovinator@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/TheLovinator1/discord-twitter-webhooks"
repository = "https://github.com/TheLovinator1/discord-twitter-webhooks"
keywords = ["bot", "discord", "discord-twitter-webhooks", "tweepy"]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/TheLovinator1/discord-twitter-webhooks/issues"

[tool.poetry.scripts]
bot = 'discord_twitter_webhooks.main:start'

[tool.poetry.dependencies]
python = "^3.11"
discord-webhook = "^1.1.0"
loguru = "^0.7.0"
reader = "^3.5"
apscheduler = "^3.10.1"
fastapi = "^0.111.0"
jinja2 = "^3.1.2"
python-multipart = "^0.0.9"
uvicorn = "^0.25.0"
httpx = "^0.26.0"
lxml = "^4.9.2"
defusedxml = "^0.7.1"
deepl = "^1.15.0"
moviepy = "^1.0.3"
pydantic = "2.5.3"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.2.2"
black = "^23.7.0"
pytest = "^7.3.1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core>=1",
]

[tool.isort]
profile = "black"

[tool.black]
line-length = 120
preview = true

[tool.ruff]
line-length = 120
select = [
    "E",
    "F",
    "B",
    "W",
    "C90",
    "I",
    "N",
    "D",
    "UP",
    "YTT",
    "ANN",
    "S",
    "BLE",
    "FBT",
    "A",
    "COM",
    "C4",
    "DTZ",
    "EM",
    "EXE",
    "ISC",
    "ICN",
    "G",
    "INP",
    "PIE",
    "T20",
    "PYI",
    "PT",
    "Q",
    "RSE",
    "RET",
    "SLF",
    "SIM",
    "TID",
    "TCH",
    "ARG",
    "PTH",
    "ERA",
    "PGH",
    "PL",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "TRY",
    "RUF",
]
ignore = [
    "D100", # pydocstyle - missing docstring in public module
    "D101", # pydocstyle - missing docstring in public class
    "D102", # pydocstyle - missing docstring in public method
    "D103", # pydocstyle - missing docstring in public function
    "D104", # pydocstyle - missing docstring in public package
    "D105", # pydocstyle - missing docstring in magic method
    "D106", # pydocstyle - missing docstring in public nested class
    "D107", # pydocstyle - missing docstring in __init__
    "PLE1205", # https://github.com/charliermarsh/ruff/issues/3351
    "FBT001", # Boolean positional arg in function definition
    "FBT002", # Boolean default value in function definition
    "FBT003", # Allow positional boolean values in function calls
]

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.per-file-ignores]
"tests/*" = ["S101", "SIM114"]

[tool.pytest.ini_options]
addopts = "-vvvvvv --exitfirst"
filterwarnings = [
    "ignore:'imghdr' is deprecated and slated for removal in Python 3.13:DeprecationWarning",
    "ignore:'cgi' is deprecated and slated for removal in Python 3.13:DeprecationWarning",
    "ignore: No parser was explicitly specified, so I'm using the best available HTML parser for this system",
    "ignore: pkg_resources is deprecated as an API:DeprecationWarning",
]

[tool.djlint]
profile = "jinja"
ignore = "H023"   # Firefox makes emojis if we use the unicode version(©️ vs &copy;)
